fix:fixed the  fade z-index issue

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -271,7 +271,7 @@ dialog {
     rgba(255, 255, 255, 0.5)
   );
   pointer-events: none;
-  z-index: 10;
+  z-index: 1;
   display: none;
 }
 
